feat: add admin panel

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ backend/build/*
 !backend/build/.gitkeep
 backend/logs/*
 !backend/logs/.gitkeep
+backend/network/channel-artifacts/*.block
+backend/network/channel-artifacts/*.block
